--- a/Week_1/Day_2/Practice/Plotting Our Blocks/style.css
+++ b/Week_1/Day_2/Practice/Plotting Our Blocks/style.css
@@ -1,68 +1,44 @@
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.container{
+    width: 950px;
+    background-color: silver;
+    margin: 0px auto;
+    padding: 25px;
 }
-
-
-.container {
-    width: 950px; 
-    background-color: silver; 
-    margin: 0 auto; 
-    padding: 20px
-}
-
-
 .top-nav {
-    height: 150px; 
-    background-color: green; 
-    margin-bottom: 15px;
+    height: 150px;
+    background-color: green;
+    margin-bottom: 20px;
 }
-
-.main-container {
-    display: inline-block; 
-    width: 100%;
-}
-
 .side-nav {
-    height: 300px; 
-    width: 200px; 
-    background-color: blue; 
-    vertical-align: top; 
-}
-.main,.side-nav{
-    display:inline-block;
-}
+    height: 300px;
+    width: 200px;
+    background-color: blue;
+    display: inline-block;
 
-
+}
 .main {
-    background-color: red; 
-    height: 300px; 
-    vertical-align: top; 
-    width: 700px; 
+    height: 400px;
+    width: 700px;
+    background-color: red;
+    display: inline-block;
+    vertical-align: top;
+    margin-bottom: 30px;
     padding: 10px;
+
     
 }
-
-
 .sub-content {
-    height: 100px; 
+    height: 200px;
+    width: 210px;
     background-color: yellow;
-    display: inline-block; 
-    width: calc(33.33% - 10px); 
-    margin-bottom: 10px; 
-    margin-right: 10px; 
+    display: inline-block;
+    margin: 5px;
 }
-
-
-.sub-content:nth-child(3) {
-    margin-right: 0;
-}
-
-
 #advertisement {
-    height: 120px; 
-    background-color: purple; 
-    width: 100%; 
+    height: 120px;
+    width: 660px;
+    background-color: purple;
 }
+
+
