--- a/Week_1/Day_3/Practice/GitHub Blocks/styles.css
+++ b/Week_1/Day_3/Practice/GitHub Blocks/styles.css
@@ -16,13 +16,31 @@ h1 {
 }
 
 .row {
+    background-color: aqua;
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
+    justify-content: space-between;
+}
+
+.row2 {
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    justify-content: space-evenly;
+}
+
+.row3 { 
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    justify-content: space-between;
 }
 
 .block {
-    background-color: lightblue;
+   
     margin: 10px;
     padding: 10px;
     border-radius: 5px;
@@ -34,9 +52,7 @@ h1 {
     border-radius: 5px;
 }
 
-.row .block {
-    background-color: #52BEFD;
-}
+
 
 p {
     font-size: 14px;
