--- a/Week_1/Day_3/Practice/GitHub Blocks/styles.css
+++ b/Week_1/Day_3/Practice/GitHub Blocks/styles.css
@@ -37,6 +37,7 @@ h1 {
     justify-content: center;
     margin-bottom: 20px;
     justify-content: space-between;
+    border-bottom: ;
 }
 
 .block {
