--- a/Week_1/Day_4/Practice/User Card/style.css
+++ b/Week_1/Day_4/Practice/User Card/style.css
@@ -15,7 +15,7 @@ body{
     width: 500px;
     height: 300px;
     border: solid  rgb(236, 235, 232);
-    margin: 50px;
+    marginpx;
    
 }
 .title{
